fixed deprecation error and refactored methods